Centring the canvas
hacktober fest dude!

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,15 @@
       html, body { background: #000; overflow: hidden; -ms-touch-action: none; touch-action: none; }
       * { margin: 0; padding: 0; }
       *, *:before, *:after { box-sizing: inherit; }
+      
+
+      html, body {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+      }
+
     </style>
   </head>
 
